# L2A-wind-direction-processor

./: .gitignore  CONTRIBUTING.rst  M64RN4.py  Makefile  README.rst  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: publish.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  modules.rst  usage.rst
l2awinddirection/: M64RN4.py  __init__.py  cli.py  config.yaml  generate_L2A_winddir_pdf_product.py  generate_L2A_winddir_regression_product.py  l2awinddirection.py  mainl2awinddirection.py  utils.py
tests/: __init__.py  test_l2awinddirection.py  test_output_name.py
